# openLudo-service

./: .gitignore  CMakeLists.txt  README.md
controller/: CMakeLists.txt  Game.ixx  main.cpp
controller/impl/: DefaultGame.ixx
core/: CMakeLists.txt  EventListener.ixx  Game.ixx  main.cpp
core/impl/: DefaultGame.ixx
model/: Board.ixx  CMakeLists.txt  Colors.cpp  Dice.ixx  Field.ixx  Pawn.ixx  Player.ixx
model/impl/: DefaultBoard.ixx  DefaultDice.ixx  DefaultField.ixx  DefaultPawn.cpp  DefaultPawn.ixx  DefaultPlayer.ixx
starter/: CMakeLists.txt  main.cpp
ui/: CMakeLists.txt  EventListener.ixx  GameServer.ixx  IGameServer.ixx  TUI.ixx  UI.ixx  UserInterface.ixx
ui/commands/: Command.ixx
ui/commands/impl/: QuitCommand.ixx  RegisterCommand.ixx  RollDiceCommand.ixx  SelectPawnCommand.ixx  StartGameCommand.ixx
ui/impl/: GameServer.cpp  NetworkUI.ixx  TUI.ixx  TuiEventListener.cpp
view/: CMakeLists.txt
